2005-06-14  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_method): Don't initialize class from static
	initializer.

2005-06-13  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_assignment): Fix types.
	(visit_return): Fix types.
	* abi.cc (build_new): Changed type of allocation call.
	* decl.cc (initialize_builtin_functions): Changed return type of
	_Jv_AllocObject and _Jv_AllocObjectNoFinalizer.

2005-06-04  Tom Tromey  <tromey@redhat.com>

	* classobj.cc (create_one_method_record): Fixed 'ncode' value.

2005-06-04  Tom Tromey  <tromey@redhat.com>

	* classobj.cc (create_one_method_record): Use
	builtin_Jv_ThrowAbstractMethodError.
	* hooks.hh (builtin_Jv_ThrowAbstractMethodError): Declare.
	* decl.cc (builtin_Jv_ThrowAbstractMethodError): New global.
	(initialize_builtin_functions): Initialize it.

2005-05-15  Tom Tromey  <tromey@redhat.com>

	* lower.cc (visit_bytecode_block): Use build_label.
	(find_label): Set DECL_ARTIFICIAL.
	* tree.hh (tree_generator::build_label): Declare.
	* tree.cc (build_label): New method.
	(visit_do): Use it.
	(visit_for_enhanced): Likewise.
	(visit_for): Likewise.
	(visit_switch): Likewise.
	(visit_switch_block): Likewise.
	(visit_while): Likewise.

2005-05-03  Tom Tromey  <tromey@redhat.com>

	* driver.cc (post_options): Set default boot class path.
	* Make-lang.in (java/driver.o): New target.

2005-04-30  Tom Tromey  <tromey@redhat.com>

	* decl.cc (initialize_builtin_functions): Fix declaration of
	_Jv_AllocObject and _Jv_AllocObjectNoFinalizer.

2005-04-28  Tom Tromey  <tromey@redhat.com>

	* lower.cc (visit_bytecode_block) <op_checkcast>: Correctly handle
	_Jv_CheckCast.
	* tree.cc (visit_cast): Correctly handle _Jv_CheckCast.

2005-04-28  Tom Tromey  <tromey@redhat.com>

	* glue.hh: Include rtl.h.
	* classobj.cc (create_class_instance): Call make_decl_rtl.  Don't
	take address of result.
	* driver.cc (register_classes): Taken from gcj.

2005-04-26  Tom Tromey  <tromey@redhat.com>
