@@ -1,3 +1,9 @@
+2005-07-11  Tom Tromey  <tromey@redhat.com>
+
+	* tree.cc (find_method): Use primitive_void_type instead of NULL
+	when printing error.
+	(visit_cast): Special case Character unboxing.
+
 2005-06-14  Tom Tromey  <tromey@redhat.com>
 
 	* tree.cc (visit_method): Don't initialize class from static
